# turbo_elf_migrate

./: .gitignore  CMakeLists.txt
include/: constants.h  dualtrellis.h  feedbacktrellis.h  feedforwardtrellis.h  galoisfield.h  galoisfieldelement.h  galoisfieldpolynomial.h  listdecoder.h  minheap.h  turbo_elf.h
matlab/: dld_metric_histogram.m
matlab/rcu/: E0_integral.m  E0funs.m  E0prime_integral.m  FER_SNR.m  RCU_warpper.m  inf_density.m  rcu.m
output/: output.txt
src/: dualListDecodingEqualMetric.cpp  duallistdecoding.cpp  dualtrellis.cpp  feedbacktrellis.cpp  feedforwardtrellis.cpp  galoisfield.cpp  galoisfieldelement.cpp  galoisfieldpolynomial.cpp  listdecoder.cpp  main.cpp  minheap.cpp  onetrellisdecoder.cpp  turbo_elf.cpp
